# kernelpopper

./: LICENSE  README.md  env.yml  kernel-popper.py  kernelpopper.py  main.py  pyproject.toml  test_and_plot.ipynb
src/kernelpopper/: __init__.py  pop.py
timing_scripts/: cubic.nf  nextflow.config  quadratic.nf  results.csv  scripts.py
